feat: change picture if different date is picked

--- a/src/main/resources/templates/today_pic.html
+++ b/src/main/resources/templates/today_pic.html
@@ -11,7 +11,7 @@
 <h2 id="title">NASA Image Title</h2>
 <img id="image">
 <label>Earlier Date:</label>
-<input type="date" value="2022-05-29">
+<input id="date_input" type="date" min="1995-06-16">
 <p id="description">Description</p>
 
 </body>
