feat: show video if media type is video

--- a/src/main/resources/templates/today_pic.html
+++ b/src/main/resources/templates/today_pic.html
@@ -10,6 +10,7 @@
 <h1>Astronomy Picture of the Day from NASA API APOD</h1>
 <h2 id="title">NASA Image Title</h2>
 <img id="image">
+<iframe id="video" style="display: block"></iframe>
 <label>Earlier Date:</label>
 <input id="date_input" type="date" min="1995-06-16">
 <p id="description">Description</p>
