feat: create new page for displaying this month's pictures

--- a/src/main/resources/templates/today_pic.html
+++ b/src/main/resources/templates/today_pic.html
@@ -11,9 +11,9 @@
 <h2 id="title">NASA Image Title</h2>
 <img id="image">
 <iframe id="video" style="display: block"></iframe>
-<label>Earlier Date:</label>
-<input id="date_input" type="date" min="1995-06-16">
+<label for="date_input">Earlier Date:</label>
+<input id="date_input" name= "date_input" type="date" min="1995-06-16">
 <p id="description">Description</p>
-
+<a href="/monthly_gallery">Gallery of the Month</a>
 </body>
 </html>
