--- a/src/main/resources/static/css/apod.css
+++ b/src/main/resources/static/css/apod.css
@@ -6,3 +6,75 @@ body{
 h1{
     text-align: center;
 }
+
+#video{
+    width: 640px;
+    height: 360px
+}
+
+#images{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+figure{
+    display: flex;
+    flex-wrap: wrap;
+    width: 20%;
+    justify-content: center;
+}
+
+img{
+    width: 100%;
+    height: auto;
+}
+
+iframe{
+    width: 100%;
+    height: auto;
+}
+
+
+figcaption{
+    width: 90%;
+    text-align: center;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
