--- a/src/main/resources/templates/month_gallery.html
+++ b/src/main/resources/templates/month_gallery.html
@@ -7,7 +7,7 @@
   <script src="/js/apod_gallery.js" defer></script>
 </head>
 <body>
-<h1>Monthly Gallery</h1>
+<h1 id="title">Monthly Gallery</h1>
 <div id="images"></div>
 
 </body>
